--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.laurikosonen.titlegenerator.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/submenu_titleCount"
+        android:enabled="true"
+        android:title="@string/titleCount"
+        android:titleCondensed="@string/titleCount"
+        android:visible="true">
+        <menu
+            android:id="@+id/menu_titleCount"
+            android:title="@string/titleCount">
+            <item
+                android:id="@+id/action_setTitleCount_1"
+                android:title="1" />
+            <item
+                android:id="@+id/action_setTitleCount_2"
+                android:title="2" />
+            <item
+                android:id="@+id/action_setTitleCount_3"
+                android:title="3" />
+            <item
+                android:id="@+id/action_setTitleCount_4"
+                android:title="4" />
+            <item
+                android:id="@+id/action_setTitleCount_5"
+                android:title="5" />
+            <item
+                android:id="@+id/action_setTitleCount_6"
+                android:title="6" />
+            <item
+                android:id="@+id/action_setTitleCount_7"
+                android:title="7" />
+            <item
+                android:id="@+id/action_setTitleCount_8"
+                android:title="8" />
+            <item
+                android:id="@+id/action_setTitleCount_9"
+                android:title="9" />
+            <item
+                android:id="@+id/action_setTitleCount_10"
+                android:title="10" />
+        </menu>
+    </item>
 </menu>
