--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -43,4 +43,30 @@
                 android:title="10" />
         </menu>
     </item>
+    <item
+        android:id="@+id/submenu_titleWordCount"
+        android:enabled="true"
+        android:title="@string/titleWordCount"
+        android:titleCondensed="@string/titleWordCount"
+        android:visible="true">
+        <menu
+            android:id="@+id/menu_titleWordCount"
+            android:title="@string/titleWordCount">
+            <item
+                android:id="@+id/action_setTitleWordCount_1"
+                android:title="1" />
+            <item
+                android:id="@+id/action_setTitleWordCount_2"
+                android:title="2" />
+            <item
+                android:id="@+id/action_setTitleWordCount_3"
+                android:title="3" />
+            <item
+                android:id="@+id/action_setTitleWordCount_4"
+                android:title="4" />
+            <item
+                android:id="@+id/action_setTitleWordCount_5"
+                android:title="5" />
+        </menu>
+    </item>
 </menu>
