Put title slot numbers in their own TextViews

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,43 +9,241 @@
     tools:showIn="@layout/activity_main">
 
     <TextView
-        android:id="@+id/titleSlot01"
-        android:layout_width="wrap_content"
+        android:id="@+id/titleSlotNumber01"
+        android:layout_width="36dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:gravity="end"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
-        android:paddingEnd="12dp"
-        android:paddingRight="12dp"
+        android:paddingEnd="6dp"
+        android:paddingRight="6dp"
+        android:text="@string/titleNumber"
+        android:textAllCaps="false"
+        android:textColor="@color/colorGray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleSlot01"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/titleSlotNumber02"
+        android:layout_width="36dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:gravity="end"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingEnd="6dp"
+        android:paddingRight="6dp"
+        android:text="@string/titleNumber"
+        android:textAllCaps="false"
+        android:textColor="@color/colorGray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleSlot02"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/titleSlotNumber03"
+        android:layout_width="36dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:gravity="end"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingEnd="6dp"
+        android:paddingRight="6dp"
+        android:text="@string/titleNumber"
+        android:textAllCaps="false"
+        android:textColor="@color/colorGray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleSlot03"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/titleSlotNumber04"
+        android:layout_width="36dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:gravity="end"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingEnd="6dp"
+        android:paddingRight="6dp"
+        android:text="@string/titleNumber"
+        android:textAllCaps="false"
+        android:textColor="@color/colorGray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleSlot04"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/titleSlotNumber05"
+        android:layout_width="36dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:gravity="end"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingEnd="6dp"
+        android:paddingRight="6dp"
+        android:text="@string/titleNumber"
+        android:textAllCaps="false"
+        android:textColor="@color/colorGray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleSlot05"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/titleSlotNumber06"
+        android:layout_width="36dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:gravity="end"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingEnd="6dp"
+        android:paddingRight="6dp"
+        android:text="@string/titleNumber"
+        android:textAllCaps="false"
+        android:textColor="@color/colorGray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleSlot06"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/titleSlotNumber07"
+        android:layout_width="36dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:gravity="end"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingEnd="6dp"
+        android:paddingRight="6dp"
+        android:text="@string/titleNumber"
+        android:textAllCaps="false"
+        android:textColor="@color/colorGray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleSlot07"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/titleSlotNumber08"
+        android:layout_width="36dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:gravity="end"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingEnd="6dp"
+        android:paddingRight="6dp"
+        android:text="@string/titleNumber"
+        android:textAllCaps="false"
+        android:textColor="@color/colorGray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleSlot08"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/titleSlotNumber09"
+        android:layout_width="36dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:gravity="end"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingEnd="6dp"
+        android:paddingRight="6dp"
+        android:text="@string/titleNumber"
+        android:textAllCaps="false"
+        android:textColor="@color/colorGray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleSlot09"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/titleSlotNumber10"
+        android:layout_width="36dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:gravity="end"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingEnd="6dp"
+        android:paddingRight="6dp"
+        android:text="@string/titleNumber"
+        android:textAllCaps="false"
+        android:textColor="@color/colorGray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleSlot10"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/titleSlot01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingEnd="54dp"
+        android:paddingRight="54dp"
         android:text="@string/form_X"
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/titleSlotNumber01"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.033" />
+        app:layout_constraintVertical_bias="0.032" />
 
     <TextView
         android:id="@+id/titleSlot02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="8dp"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
-        android:paddingEnd="12dp"
-        android:paddingRight="12dp"
+        android:paddingEnd="54dp"
+        android:paddingRight="54dp"
         android:text="@string/form_X"
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/titleSlotNumber02"
         app:layout_constraintTop_toBottomOf="@+id/titleSlot01"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -53,20 +251,20 @@
         android:id="@+id/titleSlot03"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="8dp"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
-        android:paddingEnd="12dp"
-        android:paddingRight="12dp"
+        android:paddingEnd="54dp"
+        android:paddingRight="54dp"
         android:text="@string/form_X"
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/titleSlotNumber03"
         app:layout_constraintTop_toBottomOf="@+id/titleSlot02"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -74,20 +272,20 @@
         android:id="@+id/titleSlot10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="8dp"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
-        android:paddingEnd="12dp"
-        android:paddingRight="12dp"
+        android:paddingEnd="54dp"
+        android:paddingRight="54dp"
         android:text="@string/form_X"
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/titleSlotNumber10"
         app:layout_constraintTop_toBottomOf="@+id/titleSlot09"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -95,20 +293,20 @@
         android:id="@+id/titleSlot09"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="8dp"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
-        android:paddingEnd="12dp"
-        android:paddingRight="12dp"
+        android:paddingEnd="54dp"
+        android:paddingRight="54dp"
         android:text="@string/form_X"
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/titleSlotNumber09"
         app:layout_constraintTop_toBottomOf="@+id/titleSlot08"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -116,20 +314,20 @@
         android:id="@+id/titleSlot08"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="8dp"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
-        android:paddingEnd="12dp"
-        android:paddingRight="12dp"
+        android:paddingEnd="54dp"
+        android:paddingRight="54dp"
         android:text="@string/form_X"
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/titleSlotNumber08"
         app:layout_constraintTop_toBottomOf="@+id/titleSlot07"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -137,20 +335,20 @@
         android:id="@+id/titleSlot07"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="8dp"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
-        android:paddingEnd="12dp"
-        android:paddingRight="12dp"
+        android:paddingEnd="54dp"
+        android:paddingRight="54dp"
         android:text="@string/form_X"
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/titleSlotNumber07"
         app:layout_constraintTop_toBottomOf="@+id/titleSlot06"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -158,20 +356,20 @@
         android:id="@+id/titleSlot06"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="8dp"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
-        android:paddingEnd="12dp"
-        android:paddingRight="12dp"
+        android:paddingEnd="54dp"
+        android:paddingRight="54dp"
         android:text="@string/form_X"
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/titleSlotNumber06"
         app:layout_constraintTop_toBottomOf="@+id/titleSlot05"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -179,20 +377,20 @@
         android:id="@+id/titleSlot05"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="8dp"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
-        android:paddingEnd="12dp"
-        android:paddingRight="12dp"
+        android:paddingEnd="54dp"
+        android:paddingRight="54dp"
         android:text="@string/form_X"
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/titleSlotNumber05"
         app:layout_constraintTop_toBottomOf="@+id/titleSlot04"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -200,37 +398,22 @@
         android:id="@+id/titleSlot04"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="8dp"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
-        android:paddingEnd="12dp"
-        android:paddingRight="12dp"
+        android:paddingEnd="54dp"
+        android:paddingRight="54dp"
         android:text="@string/form_X"
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/titleSlotNumber04"
         app:layout_constraintTop_toBottomOf="@+id/titleSlot03"
         app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/tipText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="90dp"
-        android:text="@string/totalWordCount"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <ToggleButton
         android:id="@+id/toggle_titleDecorations"
