--- a/app/src/main/res/xml/title_words.xml
+++ b/app/src/main/res/xml/title_words.xml
@@ -21,11 +21,15 @@
         <word>Avenged</word>
         <word>Avian</word>
         <word>Awakened</word>
+        <word>Awesome</word>
         <word>Azure</word>
         <word>Back</word>
         <word>Bad</word>
+        <word>Ballistic</word>
         <word>Banished</word>
+        <word>Basic</word>
         <word>Below</word>
+        <word>Beta</word>
         <word>Betrayed</word>
         <word>Big</word>
         <word>Bio</word>
@@ -79,6 +83,8 @@
         <word>Digital</word>
         <word>Direct</word>
         <word>Dismal</word>
+        <word>Disturbed</word>
+        <word>Disturbing</word>
         <word>Divine</word>
         <word>Double</word>
         <word>Down</word>
@@ -101,6 +107,8 @@
         <word>Evolved</word>
         <word>Extraordinary</word>
         <word>Faded</word>
+        <word>Failed</word>
+        <word>Failing</word>
         <word>Fallen</word>
         <word>Falling</word>
         <word>False</word>
@@ -108,6 +116,7 @@
         <word>Far</word>
         <word>Fatal</word>
         <word>Faulty</word>
+        <word>Few</word>
         <word>Final</word>
         <word>First</word>
         <word>Five</word>
@@ -129,6 +138,7 @@
         <word>Gamma</word>
         <word>Geo</word>
         <word>Giant</word>
+        <word>Giga</word>
         <word>Gilded</word>
         <word>Glass</word>
         <word>Gold</word>
@@ -138,6 +148,7 @@
         <word>Granite</word>
         <word>Gray</word>
         <word>Green</word>
+        <word>Grey</word>
         <word>Grim</word>
         <word>Guilty</word>
         <word>Half</word>
@@ -156,6 +167,7 @@
         <word>Hunted</word>
         <word>Hydro</word>
         <word>Hyper</word>
+        <word>Ill</word>
         <word>Immortal</word>
         <word>In</word>
         <word>Incredible</word>
@@ -180,15 +192,18 @@
         <word>Mad</word>
         <word>Major</word>
         <word>Malevolent</word>
+        <word>Many</word>
         <word>Masked</word>
         <word>Mech</word>
         <word>Mechanical</word>
         <word>Mega</word>
         <word>Metal</word>
+        <word>Micro</word>
         <word>Million</word>
         <word>Molten</word>
         <word>Mortal</word>
         <word>My</word>
+        <word>Nano</word>
         <word>Near</word>
         <word>Necro</word>
         <word>Neo</word>
@@ -198,6 +213,7 @@
         <word>New</word>
         <word>Next</word>
         <word>No</word>
+        <word>Normal</word>
         <word>Northern</word>
         <word>Nova</word>
         <word>Nuclear</word>
@@ -253,8 +269,10 @@
         <word>Serious</word>
         <word>Seven</word>
         <word>Shallow</word>
+        <word>Sharp</word>
         <word>Shattered</word>
         <word>Shredded</word>
+        <word>Sick</word>
         <word>Silent</word>
         <word>Silver</word>
         <word>Sinister</word>
@@ -263,6 +281,7 @@
         <word>Solar</word>
         <word>Southern</word>
         <word>Sovereign</word>
+        <word>Standard</word>
         <word>Static</word>
         <word>Steel</word>
         <word>Stellar</word>
@@ -277,6 +296,7 @@
         <word>Super</word>
         <word>Taken</word>
         <word>Taking</word>
+        <word>Tera</word>
         <word>Terrible</word>
         <word>This</word>
         <word>Thousand</word>
@@ -310,10 +330,12 @@
         <word>Violent</word>
         <word>Virtual</word>
         <word>Wailing</word>
+        <word>Wanted</word>
         <word>Weak</word>
         <word>Western</word>
         <word>Wet</word>
         <word>White</word>
+        <word>Whole</word>
         <word>Wicked</word>
         <word>Wild</word>
         <word>Withered</word>
@@ -337,8 +359,8 @@
         <word>Anthem</word>
         <word>Apocalypse</word>
         <word>Art</word>
-        <word>Ascendant</word>
         <word>Atom</word>
+        <word>Awe</word>
         <word>Band</word>
         <word>Bane</word>
         <word>Battalion</word>
@@ -359,11 +381,13 @@
         <word>Conspiracy</word>
         <word>Contract</word>
         <word>Core</word>
+        <word>Corporation</word>
+        <word>Corps</word>
         <word>Covenant</word>
         <word>Creed</word>
         <word>Crew</word>
         <word>Crime</word>
-        <word>Crimes</word>
+        <word plural="true">Crimes</word>
         <word>Crisis</word>
         <word>Cross</word>
         <word>Cruelty</word>
@@ -376,8 +400,6 @@
         <word>Death</word>
         <word>Defeat</word>
         <word>Defence</word>
-        <word>Descendant</word>
-        <word>Destination</word>
         <word>Destiny</word>
         <word>Destruction</word>
         <word>Dimension</word>
@@ -428,6 +450,7 @@
         <word plural="true">Ghosts</word>
         <word>Glitch</word>
         <word>Glory</word>
+        <word>Gravity</word>
         <word>Greed</word>
         <word>Grid</word>
         <word>Guild</word>
@@ -454,6 +477,8 @@
         <word>Instinct</word>
         <word>Joy</word>
         <word>Justice</word>
+        <word>Kin</word>
+        <word>Kind</word>
         <word>Law</word>
         <word>Layer</word>
         <word>League</word>
@@ -477,6 +502,8 @@
         <word>Matter</word>
         <word>Mayhem</word>
         <word>Mercy</word>
+        <word>Meter</word>
+        <word>Metre</word>
         <word>Might</word>
         <word>Mind</word>
         <word>Minds</word>
@@ -510,9 +537,8 @@
         <word>Onward</word>
         <word>Order</word>
         <word>Organization</word>
-        <word>Outcast</word>
-        <word>Outsider</word>
-        <word plural="true">Outsiders</word>
+        <word>Origin</word>
+        <word plural="true">Origins</word>
         <word>Pact</word>
         <word>Pain</word>
         <word>Pandemic</word>
@@ -558,6 +584,7 @@
         <word>Ruin</word>
         <word>Ruse</word>
         <word>Sacrifice</word>
+        <word>Saga</word>
         <word>Scape</word>
         <word>Scorn</word>
         <word>Scourge</word>
@@ -567,6 +594,7 @@
         <word>Shadow</word>
         <word plural="true">Shadows</word>
         <word>Shape</word>
+        <word>Showdown</word>
         <word>Side</word>
         <word>Signal</word>
         <word>Silence</word>
@@ -582,6 +610,8 @@
         <word plural="true">Spirits</word>
         <word>Spite</word>
         <word>Splendor</word>
+        <word>Squad</word>
+        <word>Squadron</word>
         <word>State</word>
         <word plural="true">Stories</word>
         <word>Storm</word>
@@ -653,8 +683,11 @@
         <word>Armor</word>
         <word>Ash</word>
         <word>Axe</word>
+        <word>Ball</word>
         <word>Banner</word>
         <word>Bass</word>
+        <word>Bat</word>
+        <word>Bats</word>
         <word>Beast</word>
         <word>Bird</word>
         <word>Bishop</word>
@@ -750,6 +783,7 @@
         <word>Glaive</word>
         <word>God</word>
         <word>Goddess</word>
+        <word>Gods</word>
         <word>Guide</word>
         <word>Guitar</word>
         <word>Gun</word>
@@ -763,6 +797,7 @@
         <word>Hearts</word>
         <word>Hero</word>
         <word>Heroes</word>
+        <word>Hole</word>
         <word>Hood</word>
         <word>Horn</word>
         <word>Horns</word>
@@ -789,6 +824,7 @@
         <word>Lisk</word>
         <word>Lizard</word>
         <word>Lock</word>
+        <word>Log</word>
         <word>Lord</word>
         <word>Machine</word>
         <word>Machines</word>
@@ -798,6 +834,7 @@
         <word>Mantis</word>
         <word>Mask</word>
         <word>Maw</word>
+        <word>Men</word>
         <word>Meteor</word>
         <word>Mirage</word>
         <word>Mirror</word>
@@ -809,16 +846,21 @@
         <word>Note</word>
         <word>Oil</word>
         <word>Orb</word>
+        <word>Pack</word>
         <word>Pariah</word>
         <word>Pearl</word>
+        <word>People</word>
+        <word>Person</word>
         <word>Phoenix</word>
         <word>Phone</word>
         <word>Pillar</word>
         <word>Pillars</word>
+        <word>Pin</word>
         <word>Piranha</word>
         <word>Planet</word>
         <word>Plasma</word>
         <word>Poison</word>
+        <word>Portal</word>
         <word>Rain</word>
         <word>Rat</word>
         <word>Rats</word>
@@ -895,6 +937,7 @@
         <word>Triangle</word>
         <word>Tribe</word>
         <word>Valkyrie</word>
+        <word>Vampire</word>
         <word>Venom</word>
         <word>Vermin</word>
         <word>Villain</word>
@@ -904,6 +947,7 @@
         <word>Walls</word>
         <word>Water</word>
         <word>Web</word>
+        <word>Werewolf</word>
         <word>Wheel</word>
         <word>Wind</word>
         <word>Window</word>
@@ -913,8 +957,11 @@
         <word>Witch</word>
         <word>Wolf</word>
         <word>Woman</word>
+        <word>Women</word>
         <word>Word</word>
         <word>Words</word>
+        <word>Worm</word>
+        <word>Worms</word>
         <word>Zephyr</word>
     </category>
     <category id="3" name="Actor &amp; Action" shortName="Act">
@@ -925,6 +972,7 @@
         <word>Armies</word>
         <word>Artist</word>
         <word>Ascend</word>
+        <word>Ascendant</word>
         <word>Ascension</word>
         <word>Assault</word>
         <word>Attack</word>
@@ -969,14 +1017,18 @@
         <word>Cry</word>
         <word>Curse</word>
         <word>Damage</word>
+        <word>Dance</word>
+        <word>Deceiver</word>
         <word>Deception</word>
         <word>Descend</word>
+        <word>Descendant</word>
         <word>Descent</word>
         <word>Design</word>
         <word>Destroyer</word>
         <word>Devotion</word>
         <word>Devourer</word>
         <word>Discovery</word>
+        <word>Distraction</word>
         <word>Dive</word>
         <word>Division</word>
         <word>Doctor</word>
@@ -984,6 +1036,7 @@
         <word>Drift</word>
         <word>Drifter</word>
         <word>Drop</word>
+        <word>Drive</word>
         <word>Duel</word>
         <word>Embrace</word>
         <word>Emperor</word>
@@ -1043,6 +1096,8 @@
         <word>Leader</word>
         <word>Leaders</word>
         <word>Legions</word>
+        <word>Liar</word>
+        <word>Liars</word>
         <word>Link</word>
         <word>Maker</word>
         <word>Mancer</word>
@@ -1059,6 +1114,10 @@
         <word>Nemesis</word>
         <word>Nomad</word>
         <word>Operation</word>
+        <word>Outcast</word>
+        <word plural="true">Outcasts</word>
+        <word>Outsider</word>
+        <word plural="true">Outsiders</word>
         <word>Pass</word>
         <word>Perish</word>
         <word>Pierce</word>
@@ -1116,13 +1175,16 @@
         <word>Servitor</word>
         <word>Servitors</word>
         <word>Servitude</word>
+        <word>Set</word>
         <word>Shift</word>
         <word>Shifter</word>
         <word>Shock</word>
+        <word>Show</word>
         <word>Siege</word>
         <word>Sinner</word>
         <word>Sinners</word>
         <word>Slayer</word>
+        <word>Slide</word>
         <word>Slinger</word>
         <word>Soldier</word>
         <word>Soldiers</word>
@@ -1179,6 +1241,7 @@
         <word>Archive</word>
         <word>Archives</word>
         <word>Autumn</word>
+        <word>Away</word>
         <word>Base</word>
         <word>Bastion</word>
         <word>Bay</word>
@@ -1205,11 +1268,13 @@
         <word>Days</word>
         <word>Den</word>
         <word>Desert</word>
+        <word>Destination</word>
         <word>Domain</word>
         <word>Dungeon</word>
         <word>Earth</word>
         <word>East</word>
         <word>Eden</word>
+        <word>Elsewhere</word>
         <word>Empire</word>
         <word>Estate</word>
         <word>Eternity</word>
@@ -1248,6 +1313,7 @@
         <word>Land</word>
         <word>Lands</word>
         <word>Library</word>
+        <word>Lot</word>
         <word>Luna</word>
         <word>Marsh</word>
         <word>Maze</word>
@@ -1276,7 +1342,9 @@
         <word>Path</word>
         <word>Pit</word>
         <word>Plaza</word>
+        <word>Pond</word>
         <word>Pool</word>
+        <word>Port</word>
         <word>Realm</word>
         <word>Ridge</word>
         <word>River</word>
