Made Custom Template Toggle checkable and fixed a bug with empty custom template

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -73,6 +73,7 @@
 
     <item
         android:id="@+id/action_customTemplate"
+        android:checkable="true"
         android:title="@string/action_customTemplate" />
 
     <group android:id="@+id/group_displayCategories" >
